# evolutionary-algorithms

./: .env  .env.example  .gitignore  README.md  pyproject.toml
lab1/: FramsticksEvolution.py  README.md  run.sh
lab2/: FramsticksEvolution.py  README.md  lab2.ipynb  run.sh
lab3/: FramsticksEvolution.py  README.md  lab3.ipynb  run.sh
lab4/: FramsticksEvolution.py  README.md  lab4.ipynb  lab_4_cross.py  lab_4_mutate.py  lab_4_walk.py  run-cross.sh  run-mutations.sh  run-walk.sh  run.sh
lab6/: FramsticksEvolution.py  FramsticksEvolutionGP.py  FramsticksEvolutionGPBare.py  README.md  lab6.ipynb  run-ea.sh  run-gp.sh  tree.py
lab7/: FramsticksEvolution.py  README.md  lab7.ipynb  run-update.sh  run.sh
