[project]
name = "amib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.1",
    "jupyterlab>=4.2.5",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
