[project]
name = "amib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
